tests/baselines/reference/project/moduleMergingOrdering1/node/moduleMergingOrdering1.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== a.ts (0 errors) ====
    module Test {
        class A {
            one: string;
            two: boolean;
            constructor (t: string) {
                this.one = t;
                this.two = false;
            }
        }
        export class B {
            private member: A[];
    
            constructor () {
                this.member = [];
            }
        }
    }
    
==== b.ts (0 errors) ====
    module Test {}
    
    